[tool.poetry]
name = "advent-2021"
version = "0.1.0"
description = ""
authors = ["elliotdes"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[tool.pytest.ini_options]
python_files = "*.py"
addopts = "--ignore=utils"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
